<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lonoti</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="re_enter">Reenter Password</string>
    <string name="title_activity_home">Lonoti Home</string>
    <string name="title_activity_envent">EnventActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="sign_in">SignIn</string>
    <string name="title_activity_lonoti_event_create">New Event</string>
    <string name="title_activity_map_select">MapSelectActivity</string>

    <string-array name="event_type_array">
        <item>Time Based</item>
        <item>Location Based</item>
        <item>Location Time Based</item>
    </string-array>

    <string name="event_type_select_promt">Type of Event</string>
    <string name="event_item_save">Save</string>
    <string name="ok_string">OK</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_calander">CalanderActivity</string>

</resources>